# TP_projekt3

./: CMakeLists.txt  Projekt3_Raport.ipynb  README.md  Raport.ipynb
.github/workflows/: wheels.yml
src/: main.cpp
src/scikit_build_example/: __init__.py
tests/: test_basic.py
tests/results/: Raport.ipynb  inputs.txt
